Clean up build.gradle